		* src/piece.c (mapPawnPotentialMoves): now checks if en passant is a potential move and adds it if it is

	header file changes
		* include/vgcp: added "potentialEnPassant" to the tileState enum, updated prototypes 

2021-02-23	version 00-000A
	Implemented threefold repitition. If the same position repeats thrice then the game results in a draw. The implementation isn't perfect because (for example) it doesn't take into account the "En Passant" rights when counting repetitions. Also, fixed a compilation error related to variable definitions in the header files and some other bugs.

	source file changes
		* src/main.c: now defines variables here
		* src/move.c (movePiece): now calls the "checkForRepitition" function to check for threefold repitition
		* src/positionList: created new function for checking repitition (checkForRepitition) and created related static functions (compareBoards, compareCastlingRights) 
		* src/positionList (addToPositionList): optimized memory usage (wipes the list clean if an irreversible move occurs)

	header file changes
		* include/vgcp: now all variable definitions are "extern"s

2021-02-24	version	00-000B
	WARNING: I have noticed some odd checkmate related bugs in this version.
		 Please create an issue on github or contact me on email (theshoutingparrot@protonmail.com)
	Implemented draw as a result of insufficent material and now correctly checks repitition.

	source file changes
		* src/piece: created new function for checking if there aren't enough pieces for a checkmate (checkIfEnoughPieces)
		* src/move.c (movePiece): now calls the checkIfEnoughPieces to check for enough pieces
		* src/position.c (updatePosition): now updates the amount of pieces (piecesArray)
		* src/position_list.c (checkForRepitition): corrected repitition checking

	header file changes
		* include/vgcp: added warning about unstability of this program (for now),
			added an array of pieces (piecesArray) which stores the amount of different pieces on the board