@@ -13,7 +13,7 @@ APPLICATIONS	= /usr/share/applications
 _DEPS		= vgcp.h
 DEPS		= $(patsubst %,$(INC_DIR)/%,$(_DEPS))
 
-_OBJ		= main.o init.o draw.o move.o piece.o position.o position_list.o select.o util.o
+_OBJ		= main.o init.o draw.o move.o piece.o position.o select.o util.o
 OBJ		= $(patsubst %,$(OBJ_DIR)/%,$(_OBJ))
 
 all: vgcp clean
